--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
 		"svelte": "^3.50.1",
 		"vite": "^3.1.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"keycloak-js": "^19.0.2"
+	}
 }
