--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview",
+		"preview": "vite preview --port 5173",
 		"package": "svelte-package",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "1.0.0-next.72",
+		"@sveltejs/adapter-node": "^1.0.0-next.96",
 		"@sveltejs/adapter-static": "1.0.0-next.42",
 		"@sveltejs/kit": "1.0.0-next.480",
 		"@sveltejs/package": "^1.0.0-next.3",
