--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "syncshare"
+name = "trufel"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,11 +9,24 @@ edition = "2021"
 axum = {version = "0.5.16", features = ["headers"]}
 tokio = {version = "1.21.1", features = ["full"]}
 serde = {version = "1.0.145", features = ["derive"]}
+tower = {version = "0.4.13", features = ["util", "timeout", "load-shed", "limit"]}
+sqlx = {version = "0.6.2", features = [ "postgres", "macros", "time", "uuid", "runtime-tokio-rustls" ]}
+reqwest = {version = "0.11.12", features = ["json"]}
 serde_json = "1.0.85"
 dotenv = "0.15.0"
 futures = "0.3.24"
+headers = "0.3"
 simple_logger = "2.3.0"
+log = "0.4.17"
+alcoholic_jwt = "4091.0.0"
+thiserror = "1.0.37"
+anyhow = "1.0.65"
+uuid = {version = "1.1.2", features = ["v4", "serde"]}
+semver = "1.0.14"
+rust-embed = "6.4.1"
+tracing = "0.1.36"
+tracing-subscriber = {version = "0.3.15", features = ["env-filter"]}
 
 [dependencies.tower-http]
 version = "*"
-features = ["cors"]
+features = ["add-extension", "cors", "compression-full", "trace"]
