--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,11 @@ semver = "1.0.14"
 rust-embed = "6.4.1"
 tracing = "0.1.36"
 tracing-subscriber = {version = "0.3.15", features = ["env-filter"]}
+tracing-bunyan-formatter = "0.3.3"
+tracing-opentelemetry = "0.18.0"
+opentelemetry = {version = "0.18.0", default-features = false, features = ["trace", "rt-tokio"]}
+opentelemetry-otlp = {version = "0.11.0", features = ["reqwest-client", "reqwest-rustls", "http-proto"]}
+opentelemetry-proto = "0.1.0"
 
 [dependencies.tower-http]
 version = "*"
