--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,8 @@ tower = {version = "0.4.13", features = ["util", "timeout", "load-shed", "limit"
 sqlx = {version = "0.6.2", features = [ "postgres", "macros", "time", "uuid", "runtime-tokio-rustls" ]}
 reqwest = {version = "0.11.12", features = ["json"]}
 serde_json = "1.0.85"
-dotenv = "0.15.0"
 futures = "0.3.24"
 headers = "0.3"
-log = "0.4.17"
 alcoholic_jwt = "4091.0.0"
 thiserror = "1.0.37"
 anyhow = "1.0.65"
@@ -27,9 +25,9 @@ tracing = "0.1.36"
 tracing-subscriber = {version = "0.3.15", features = ["env-filter"]}
 tracing-bunyan-formatter = "0.3.3"
 tracing-opentelemetry = "0.18.0"
-opentelemetry = {version = "0.18.0", default-features = false, features = ["trace", "rt-tokio"]}
-opentelemetry-otlp = {version = "0.11.0", features = ["reqwest-client", "reqwest-rustls", "http-proto"]}
-opentelemetry-proto = "0.1.0"
+opentelemetry = {version = "0.18.0", default-features = false, features = ["trace", "metrics", "rt-tokio"]}
+opentelemetry-otlp = {version = "0.11.0", features = ["reqwest-client", "reqwest-rustls", "http-proto", "metrics"]}
+tracing-log = "0.1.3"
 
 [dependencies.tower-http]
 version = "*"
