--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,9 @@ opentelemetry = {version = "0.18.0", default-features = false, features = ["trac
 opentelemetry-otlp = {version = "0.11.0", features = ["reqwest-client", "reqwest-rustls", "http-proto", "metrics"]}
 tracing-log = "0.1.3"
 
+hugsql = {version = "0.1.0", path = "hugsql"}
+
 [dependencies.tower-http]
 version = "*"
 features = ["add-extension", "cors", "compression-full", "trace"]
+
