--- a/hugsql/Cargo.toml
+++ b/hugsql/Cargo.toml
@@ -7,4 +7,8 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
+syn = {version = "1", default-features = false, features = ["derive", "parsing", "proc-macro"]}
+proc-macro2 = "1"
+quote = "1"
+chumsky = "0.8.0"
 rust-embed = "6.4.1"
