--- a/hugsql/Cargo.toml
+++ b/hugsql/Cargo.toml
@@ -11,4 +11,4 @@ syn = {version = "1", default-features = false, features = ["derive", "parsing",
 proc-macro2 = "1"
 quote = "1"
 chumsky = "0.8.0"
-rust-embed = "6.4.1"
+walkdir = "2.3.2"
