--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ headers = "0.3"
 alcoholic_jwt = "4091.0.0"
 thiserror = "1.0.37"
 anyhow = "1.0.65"
+async-trait = "0.1.57"
 uuid = {version = "1.1.2", features = ["v4", "serde"]}
 semver = "1.0.14"
 rust-embed = "6.4.1"
@@ -28,6 +29,7 @@ tracing-opentelemetry = "0.18.0"
 opentelemetry = {version = "0.18.0", default-features = false, features = ["trace", "metrics", "rt-tokio"]}
 opentelemetry-otlp = {version = "0.11.0", features = ["reqwest-client", "reqwest-rustls", "http-proto", "metrics"]}
 tracing-log = "0.1.3"
+futures-core = "0.3.24"
 
 hugsql = {version = "0.1.0", path = "hugsql"}
 
