--- a/hugsqlx/hugsqlx-derive/Cargo.toml
+++ b/hugsqlx/hugsqlx-derive/Cargo.toml
@@ -1,14 +1,13 @@
 [package]
-name = "hugsql"
 version = "0.1.0"
+name = "hugsqlx-derive"
 edition = "2021"
 
 [lib]
 proc-macro = true
 
 [dependencies]
+hugsqlx-analyzer = { version = "0.1.0", path = "../hugsqlx-analyzer" }
 syn = {version = "1", default-features = false, features = ["derive", "parsing", "proc-macro"]}
 proc-macro2 = "1"
 quote = "1"
-chumsky = "0.8.0"
-walkdir = "2.3.2"
