--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = {version = "0.5.16", features = ["headers"]}
+
+hugsqlx = {version = "0.1.0", path = "../rust/hugsqlx"}
+
+axum = {version = "0.6.0-rc.2", features = ["headers"]}
 tokio = {version = "1.21.1", features = ["full"]}
 serde = {version = "1.0.145", features = ["derive"]}
 tower = {version = "0.4.13", features = ["util", "timeout", "load-shed", "limit"]}
@@ -30,8 +33,6 @@ opentelemetry = {version = "0.18.0", default-features = false, features = ["trac
 opentelemetry-otlp = {version = "0.11.0", features = ["reqwest-client", "reqwest-rustls", "http-proto", "metrics"]}
 tracing-log = "0.1.3"
 futures-core = "0.3.24"
-
-hugsqlx = {version = "0.1.0", path = "hugsqlx"}
 
 [dependencies.tower-http]
 version = "*"
