--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2021"
 
 [dependencies]
 
-hugsqlx = {version = "0.1.0", features = ["postgres"],  git = "https://github.com/mbuczko/hugsqlx", branch = "develop"}
+# hugsqlx = {version = "0.1.0", features = ["postgres"],  git = "https://github.com/mbuczko/hugsqlx", branch = "develop"}
+hugsqlx = {version = "0.1.5", features = ["postgres", "tracing"], path = '../rust/hugsqlx'}
 
 axum = {version = "0.6.0-rc.2", features = ["headers"]}
 tokio = {version = "1.21.1", features = ["full"]}
@@ -24,13 +25,16 @@ uuid = {version = "1.1.2", features = ["v4", "serde"]}
 semver = "1.0.14"
 rust-embed = "6.4.1"
 tracing = "0.1.36"
-tracing-subscriber = {version = "0.3.15", features = ["env-filter"]}
-tracing-bunyan-formatter = "0.3.3"
+tracing-subscriber = {version = "0.3.15", features = ["registry", "env-filter"]}
 tracing-opentelemetry = "0.18.0"
-opentelemetry = {version = "0.18.0", default-features = false, features = ["trace", "metrics", "rt-tokio"]}
-opentelemetry-otlp = {version = "0.11.0", features = ["reqwest-client", "reqwest-rustls", "http-proto", "metrics"]}
 tracing-log = "0.1.3"
+opentelemetry = {version = "0.18.0", default-features = false, features = ["trace", "metrics", "rt-tokio"]}
+opentelemetry-otlp = {version = "0.11.0", features = ["reqwest-client", "reqwest-rustls", "metrics"]}
 futures-core = "0.3.24"
+hmac = "0.12.1"
+sha2 = "0.10.6"
+subtle-encoding = "0.5.1"
+axum-macros = "0.3.0"
 
 [dependencies.tower-http]
 version = "*"
