--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ hmac = "0.12.1"
 sha2 = "0.10.6"
 subtle-encoding = "0.5.1"
 axum-macros = "0.3.0"
+pusher = "0.4.5"
 
 [dependencies.tower-http]
 version = "*"
