--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,4 @@
+# Ignore files for PNPM, NPM and YARN
 .git
 .svelte-kit
 k8s
@@ -6,5 +7,5 @@ target
 public
 *.yaml
 *.rs
-package-lock.json
-package.json
+*.lock
+*.json
