--- a/.prettierrc
+++ b/.prettierrc
@@ -3,9 +3,11 @@
 	"singleQuote": true,
 	"trailingComma": "none",
 	"printWidth": 100,
-	"tabWidth": 2,
+	"tabWidth": 4,
 	"svelteStrictMode": false,
 	"svelteAllowShorthand": true,
 	"svelteBracketNewLine": false,
-	"svelteIndentScriptAndStyle": false
+	"svelteIndentScriptAndStyle": false,
+	"plugins": ["prettier-plugin-svelte"],
+	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
