--- a/package.json
+++ b/package.json
@@ -1,32 +1,36 @@
 {
-	"name": "trufel-ui",
-	"version": "0.0.1",
+	"name": "trufel-webapp",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview --port 5173",
-		"package": "svelte-package",
-		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --write --plugin-search-dir=. ."
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "3.0.1",
-		"@sveltejs/adapter-node": "2.0.2",
-		"@sveltejs/adapter-static": "3.0.1",
-		"@sveltejs/kit": "2.0.6",
-		"@sveltejs/package": "2.2.5",
-		"eslint": "8.56.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte3": "4.0.0",
-		"prettier": "^2.4.1",
-		"prettier-plugin-svelte": "^2.4.0",
-		"svelte": "3.2.0",
-		"vite": "5.0.10"
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/eslint": "8.56.0",
+		"eslint": "^8.56.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.35.1",
+		"prettier": "^3.1.1",
+		"prettier-plugin-svelte": "^3.1.2",
+		"svelte": "^4.2.7",
+		"svelte-check": "^3.6.0",
+		"typescript": "^5.0.0",
+		"vite": "^5.0.3"
 	},
-	"type": "module",
 	"dependencies": {
-		"keycloak-js": "^19.0.2",
-		"pusher-js": "^8.0.0",
-		"svelte-material-icons": "3.0.5"
+		"alpinejs": "^3.13.3",
+		"keycloak-js": "^23.0.3",
+		"pusher-js": "^8.4.0-rc2",
+		"svelte-material-icons": "^3.0.5"
 	}
 }
