--- a/package.json
+++ b/package.json
@@ -13,23 +13,26 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@sveltejs/adapter-auto": "^3.1.1",
+		"@sveltejs/kit": "^2.5.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.2",
 		"@types/eslint": "8.56.0",
+		"browserslist": "^4.22.3",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
+		"lightningcss": "^1.23.0",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
-		"svelte": "^4.2.7",
+		"svelte": "^4.2.9",
 		"svelte-check": "^3.6.0",
+		"svelte-preprocess": "^5.1.3",
 		"typescript": "^5.0.0",
-		"vite": "^5.0.3"
+		"vite": "^5.0.12"
 	},
 	"dependencies": {
-		"alpinejs": "^3.13.3",
 		"keycloak-js": "^23.0.3",
+		"material-icons": "^1.13.12",
 		"pusher-js": "^8.4.0-rc2",
 		"svelte-material-icons": "^3.0.5"
 	}
