--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"keycloak-js": "^23.0.3",
 		"material-icons": "^1.13.12",
 		"pusher-js": "^8.4.0-rc2",
+		"scroll-into-view-if-needed": "^3.1.0",
 		"svelte-material-icons": "^3.0.5"
 	}
 }
